--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -657,6 +657,7 @@ header .navbar-nav .dropdown-menu {
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
+  width:475px;
   letter-spacing: 0.16px;
   border: 1px solid #ABBED1;
 }
